--- a/src/pages/login/index.css
+++ b/src/pages/login/index.css
@@ -1,8 +1,10 @@
 button.login{
     width: 250px;
-    background-color: rgba(250,0,0,.4);
+    background-color: rgba(0,0,0,.3);
     border: 1px ;
-    box-shadow: 1px 5px 5px 5px  rgba(250,0,0,.3) ;
+    color: black;
+    font-weight: 900;
+
 
 }
 input.login{
@@ -11,7 +13,7 @@ input.login{
     border-top: none;
     border-left: 0px;
     border-right: 0px;
-    border-bottom: 2px solid rgba(250,0,0,.4);
+    border-bottom: 2px solid rgba(0,0,0,1);
     background-color: rgba(0,0,0,0);
 
 }
@@ -32,9 +34,9 @@ textarea:focus, input:focus, select:focus {
     outline: 0;
 }
 
-div.login{
+form.login{
     border-radius: 15px;
-   border: 4px solid rgba(250,0,0,.4);
+   border: 4px solid rgba(0,0,0,1);
     position: absolute;
     display: flex;
     flex-direction: column;
