--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,23 @@ body{
 input {
     padding-left: 5px;
     margin: 5px;
-    border-radius: 12px;
+    border-radius: 5px;
     height: 35px;
     }
+
+select {
+    padding-left: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    height: 35px;
+}
+option{
+    padding-left: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    height: 35px;
+}
+
 button{
     padding: 0px 5px;
     margin: 5px;
