--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,18 @@
     padding: 0px;
     margin: 0px;
 
-    position: relative;
-
+    box-sizing: border-box;
 }
+
+html{
+    height: 100%;
+    width: 100%;
+}
+
 body{
     background-color: rgba(100,100,100,.2);
-
-
-
+    height: 100%;
+    width: 100%;
 
 }
 
@@ -19,7 +23,7 @@ input {
     margin: 5px;
     border-radius: 5px;
     height: 35px;
-    }
+}
 
 select {
     padding-left: 5px;
