--- a/src/pages/cadastroAtendimento/index.css
+++ b/src/pages/cadastroAtendimento/index.css
@@ -58,19 +58,20 @@ ul.listAtendimentos{
 
     height: 800px;
     position: relative;
-    display: grid;
-    grid-template-columns: 50% 50%;
+
 }
 
 li.listAtendimentos {
-    background-color: chartreuse;
+    background-color: rgba(100,100,100,.3);
     border: solid black 1px;
-    margin: 2px;
-    padding: 2px;
+    margin: 10px;
+    padding: 5px;
     height: 150px;
     width: 90%;
 overflow: hidden;
     display: block;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+    border-radius: 10px;
 }
 
 h1{
